feat: config kong for go and node service
