# services/chat-service/docs/swagger.json
@@ -166,13 +166,6 @@
                         "name": "conversationId",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "buyer or shop",
-                        "name": "role",
-                        "in": "query",
-                        "required": true
                     }
                 ],
                 "responses": {}
